# tuJanChart

./: .env.example  .gitignore  Dockerfile  StockPulse_BRD_v1.docx  StockPulse_PRD_v1.docx  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: PROGRESS.md  StockPulse_BRD_v1.md  StockPulse_PRD_v1.md
migrations/: env.py
migrations/versions/: a1d7950da92e_initial_schema.py
seed/: builtin_screeners.py  import_corporate_data.py  import_nse_bse_universe.py  import_result_dates.py  import_screeners.py  import_universe.py  run_migration.py
stockpulse/: app.py  extensions.py
stockpulse/api/: __init__.py  auth.py  events.py  schemas.py  screeners.py  stocks.py  universe.py  webhooks.py
stockpulse/engine/: events.py  indicators.py  screener_engine.py  signals.py  tasks.py
stockpulse/ingestion/: scheduler.py  tasks.py
stockpulse/ingestion/adapters/: base.py  bse_adapter.py  yfinance_adapter.py
stockpulse/integrations/: tujanalyst_client.py
stockpulse/models/: __init__.py  annotation.py  base.py  corporate_action.py  event.py  indicator.py  price.py  screener.py  stock.py  user.py  watchlist.py
stockpulse/utils/: market_calendar.py
stockpulse/web/: __init__.py  admin_views.py  auth_views.py  views.py
stockpulse/web/templates/: base.html
stockpulse/webhooks/: dispatcher.py  tasks.py
tests/: conftest.py  test_api_events.py  test_api_index.py  test_api_screeners.py  test_api_stocks.py  test_api_universe.py  test_api_webhooks.py  test_events.py  test_indicators.py  test_screener_engine.py
(+21 files in other folders)
